find free time implemented
