# router.go
@@ -13,9 +13,9 @@ func initRouter() {
 	http.HandleFunc("/meeting", schedule.MeetingHandler)
 	http.HandleFunc("/response", schedule.ResponseHandler)
 	http.HandleFunc("/user_meetings", schedule.UserMeetingsHandler)
+	http.HandleFunc("/find_free_time", schedule.FindFreeTimeHandler)
 
 	http.Handle("/swagger/", httpSwagger.Handler(
 		httpSwagger.URL("/swagger/doc.json"),
 	))
-
 }
